fix: don't wrap FIR labels

--- a/src/app/map/styles/fir-label.scss
+++ b/src/app/map/styles/fir-label.scss
@@ -1,4 +1,5 @@
 .vatsim-fir-label-active {
   color: #9d5656;
   font-weight: bolder;
+  white-space: nowrap;
 }
